# Make_data_enc_form

./: CMakeLists.txt
src/: dec.c  enc.c  genRandom.c  main.c  utils.c
src/include/: dec.h  enc.h  genRandom.h  utils.h
